[gd_scene load_steps=4 format=3 uid="uid://br2xoqpy0k8tc"]

[ext_resource type="Script" uid="uid://d0rpx0dk26upk" path="res://HUDs/SettingsUI.gd" id="1_foi73"]
[ext_resource type="Theme" uid="uid://bngt8jkm3fvb1" path="res://Resources/hud_elements/default.theme" id="2_e018v"]
[ext_resource type="PackedScene" uid="uid://3g685ilkl0qx" path="res://HUDs/Components/BaseMenuUI.tscn" id="2_foi73"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_foi73")

[node name="Menu" parent="." instance=ExtResource("2_foi73")]

[node name="ContentContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_e018v")
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 90
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Settings" type="Label" parent="ContentContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="ContentContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ContentContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="ScrollContainer" type="ScrollContainer" parent="ContentContainer/VBoxContainer/MarginContainer"]
clip_contents = false
layout_mode = 2
scroll_vertical = 44

[node name="SettingTypeContainer" type="VBoxContainer" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="Video" type="Label" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 8
text = "Video"

[node name="HSeparator" type="HSeparator" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer"]
layout_mode = 2

[node name="VideoOptionsMarginContainer" type="MarginContainer" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/VideoOptionsMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Resolution" type="HBoxContainer" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/VideoOptionsMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/VideoOptionsMarginContainer/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 8
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/VideoOptionsMarginContainer/VBoxContainer/Resolution"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="Spacer" type="Control" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Audio" type="Label" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 8
text = "Audio"

[node name="HSeparator2" type="HSeparator" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer"]
layout_mode = 2

[node name="AudioOptionsMarginContainer2" type="MarginContainer" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/AudioOptionsMarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MasterVolume" type="HBoxContainer" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/AudioOptionsMarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/AudioOptionsMarginContainer2/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 8
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/AudioOptionsMarginContainer2/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="Value" type="Label" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/AudioOptionsMarginContainer2/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 8
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Game" type="Label" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer"]
layout_mode = 2
theme = ExtResource("2_e018v")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 8
text = "Game"

[node name="HSeparator3" type="HSeparator" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer"]
layout_mode = 2

[node name="GameOptionsMarginContainer" type="MarginContainer" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/GameOptionsMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Tooltips" type="HBoxContainer" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/GameOptionsMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/GameOptionsMarginContainer/VBoxContainer/Tooltips"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tooltips Enabled"

[node name="CheckBox" type="CheckBox" parent="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/GameOptionsMarginContainer/VBoxContainer/Tooltips"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ContentContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="CancelButton" type="Button" parent="ContentContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Cancel"

[node name="ApplyButton" type="Button" parent="ContentContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.592, 0.365, 0.22, 0.5)
theme_override_colors/font_hover_pressed_color = Color(0.592157, 0.364706, 0.219608, 1)
theme_override_colors/font_hover_color = Color(0.592157, 0.364706, 0.219608, 1)
theme_override_colors/font_color = Color(0.592157, 0.364706, 0.219608, 1)
theme_override_colors/font_focus_color = Color(0.592157, 0.364706, 0.219608, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Apply"

[connection signal="item_selected" from="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/VideoOptionsMarginContainer/VBoxContainer/Resolution/OptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="drag_ended" from="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/AudioOptionsMarginContainer2/VBoxContainer/MasterVolume/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/AudioOptionsMarginContainer2/VBoxContainer/MasterVolume/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="ContentContainer/VBoxContainer/MarginContainer/ScrollContainer/SettingTypeContainer/GameOptionsMarginContainer/VBoxContainer/Tooltips/CheckBox" to="." method="_on_tooltips_enabled_check_box_toggled"]
[connection signal="pressed" from="ContentContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="ContentContainer/VBoxContainer/HBoxContainer/ApplyButton" to="." method="_on_apply_button_pressed"]
